--- a/Battleships-android/res/values/strings.xml
+++ b/Battleships-android/res/values/strings.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <string name="app_name">Laiva</string>
+    <string name="app_name">Battleships online</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_lobby">Lobby</string>
-
 </resources>
