--- a/Battleships-android/res/values/strings.xml
+++ b/Battleships-android/res/values/strings.xml
@@ -3,5 +3,5 @@
     <string name="app_name">Battleships online</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
-    <string name="title_activity_lobby">Lobby</string>
+    <string name="title_activity_lobby">Battleships</string>
 </resources>
